--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:theme="@style/Theme.NewSmackApp"
         tools:targetApi="31">
         <activity
-            android:name=".CreateUserActivity"
+            android:name=".controller.CreateUserActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".controller.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".controller.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.NewSmackApp.NoActionBar">
