--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".controller.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:windowSoftInputMode = "stateAlwaysHidden"
             android:theme="@style/Theme.NewSmackApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
